styles/store.css
a.steamdb_link {
	color: #898a8c;
}

a.steamdb_link:hover {
	text-decoration: underline;
}

.steamdb_error_link {
	margin-top: 25px;
}

.game_purchase_action .steamdb_link {
	float: left;
	margin-top: 8px;
}

@media (min-width: 600px) {
	.game_purchase_sub_dropdown .steamdb_link {
		position: absolute;
		bottom: -11px;
		left: 16px;
	}
}

.btn_steamdb .ico16 {
	background: none;
}

.steamdb_last_update_old {
	color: #f44336 !important;
}

.steamdb_last_update_old::after {
	display: inline-block;
	content: " ⚠️️";
}

.steamdb_stats {
	font-family: "Motiva Sans", Arial, Helvetica, sans-serif;
}

.steamdb_stats_logo {
	width: 54px;
	height: 54px;
	float: right;
	opacity: 0.5;
	transition: opacity 0.1s ease-in-out;
}

.steamdb_stats:hover .steamdb_stats_logo {
	opacity: 1;
}

.steamdb_stats_name {
	min-width: 90px;
	margin-right: 5px;
	display: inline-block;
}

.steamdb_stats_number {
	font-weight: bold;
	color: #67c1f5;
}

.steamdb_stats p:last-child {
	margin-bottom: 0;
}

.steamdb_last_update {
	padding-bottom: 13px;
}

.glance_ctn .release_date + .steamdb_last_update {
	margin-top: -13px;
}

.steamdb_last_update a {
	display: block;
}

#error_display .steamdb_registerkey_lineitem {
	margin-top: 20px;
}

.steamdb_registerkey_lineitem img {
	width: 16px;
	height: 16px;
	margin-right: 5px;
	vertical-align: text-top;
}

.steamdb_prices {
	background-color: rgb(0 0 0 / 20%);
	border-radius: 4px;
	margin-bottom: 10px;
	padding: 8px 16px;
	font-family: "Motiva Sans", Arial, Helvetica, sans-serif;
	color: #c6d4df;
	display: flex;
}

.steamdb_prices_bottom {
	font-style: italic;
	font-size: 12px;
	color: #8f98a0;
}

.steamdb_prices img {
	align-self: center;
	width: 32px;
	height: 32px;
	padding-right: 10px;
	opacity: 0.5;
	transition: opacity 0.1s ease-in-out;
}

.steamdb_prices:hover img {
	opacity: 1;
}

.steamdb_prices:hover .steamdb_prices_top {
	text-decoration: underline;
}

.steamdb_prices:hover .steamdb_prices_bottom {
	color: #c6d4df;
}

.steamdb_prices b {
	font-weight: bold;
	color: #a3cf06;
}

.steamdb_rating.steamdb_rating_good {
	color: #6c3;
}

.steamdb_rating.steamdb_rating_average {
	color: #fc3;
}

.steamdb_rating.steamdb_rating_poor {
	color: #e60;
}

.steamdb_rating.steamdb_rating_white {
	color: #aaa;
}

.steamdb_rating a {
	color: #556772 !important;
}

.steamdb_rating a:hover {
	color: #fff !important;
}

/**
 * Fix for very long game names not overflowing correctly
 */
.apphub_AppName {
	word-wrap: break-word;
}

/**
 * Fix date not fitting after we insert subid links
 */
.account_table th {
	min-width: 100px;
}

@media screen and (max-width: 500px) {
	html.responsive .steamdb_stats .block_content_inner {
		margin-top: 0;
	}
}

